订房界面保存

--- a/client/pages/bookKTV/bookKTV.wxml
+++ b/client/pages/bookKTV/bookKTV.wxml
@@ -1,2 +1,2 @@
-<!--pages/bookKtv/bookKtv.wxml-->
-<text>pages/bookKtv/bookKtv.wxml</text>
+<!--pages/bookKTV/bookKTV.wxml-->
+<text>pages/bookKTV/bookKTV.wxml</text>
