--- a/client/pages/bookRoom/bookRoom.wxss
+++ b/client/pages/bookRoom/bookRoom.wxss
@@ -1,33 +1,66 @@
 /* pages/bookRoom/bookRoom.wxss */
-.hotelBanner{
+
+.hotelBanner {
   width: 100%;
+  height: 300rpx;
 }
 
-.hotelImg{
+.hotelImg {
   width: 100%;
-  height: 300rpx; 
-  filter: brightness(0.75)
+  height: 300rpx;
+  filter: brightness(0.75);
 }
 
-.hotelName{
-  position:fixed;
-  font-size:35rpx;
-  top:200rpx;
-  color:white;
-  left:20rpx;
+.hotelName {
+  position: fixed;
+  font-size: 35rpx;
+  top: 200rpx;
+  color: white;
+  left: 20rpx;
 }
 
-.hotelInfo{
-  display:flex;
-  font-size:23rpx;
-  position:fixed;
-  top:257rpx;
-  color:white;
-  left:20rpx;
+.hotelInfo {
+  display: flex;
+  font-size: 23rpx;
+  position: fixed;
+  top: 257rpx;
+  color: white;
+  left: 20rpx;
 }
 
-.hotelFeature{
-  margin-left:20rpx;
-  border:solid 1rpx white;
-  padding:0 10rpx; 
+.hotelFeature {
+  margin-left: 20rpx;
+  border: solid 1rpx white;
+  padding: 0 10rpx;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 15rpx 0rpx;
+  border-bottom: solid #f0f0f0 20rpx;
+}
+
+.address {
+  margin-left: 20rpx;
+  font-size: 28rpx;
+}
+
+.alias {
+  color: #a2a2a2;
+}
+
+.toNavigationButton {
+  display: flex;
+  margin-right: 20rpx;
+  font-size: 26rpx;
+  color: #2abeaf;
+  align-items: center;
+}
+
+.jumpButton {
+  height: 25rpx;
+  width: 25rpx;
+  margin-left: 20rpx;
 }
