添加导航功能

--- a/client/pages/bookRoom/bookRoom.wxml
+++ b/client/pages/bookRoom/bookRoom.wxml
@@ -33,7 +33,7 @@
   </view>
 
   <!--导航功能-->
-  <view class='navigation'>
+  <view class='navigation' bindtap='openMap' >
 
     <!--地址-->
     <view class='address'>
