--- a/client/pages/bookRoom/bookRoom.wxml
+++ b/client/pages/bookRoom/bookRoom.wxml
@@ -5,9 +5,13 @@
   <view class='hotelBanner'>
 
     <!--酒店图片-->
-    <image class='hotelImg' src='../../images/hotelBanner.jpg' mode='aspectFill' bindtap='previewHotelAlbum'>
-    </image>
-
+    <swiper class='hotelImg' autoplay='true' interval='5000'>
+      <swiper-item wx:for='{{albumUrl}}'>
+        <image src='{{item}}' class='roomImg' height='150' width='100%' mode='aspectFill' bindtap='previewHotelAlbum' id='{{index}}'></image>
+        <!--相册数量及当前编号-->
+        <view class='albumNum'>{{index+1}}/{{albumUrl.length}}</view>
+      </swiper-item>
+    </swiper>
     <!--酒店名称-->
     <view class='hotelName'>
       华亚大酒店
