--- a/client/pages/bookRoom/bookRoom.wxss
+++ b/client/pages/bookRoom/bookRoom.wxss
@@ -1,5 +1,13 @@
 /* pages/bookRoom/bookRoom.wxss */
 
+page {
+  height: 100%;
+}
+
+.container {
+  height: 100%;
+}
+
 .hotelBanner {
   width: 100%;
   height: 300rpx;
@@ -247,22 +255,26 @@
 
 .roomDetail {
   width: 100%;
-  height: 810rpx;
+  height: 840rpx;
   overflow: hidden;
   position: fixed;
   left: 0;
   z-index: 1001;
-  background: #fafafa;
+  background: #fff;
   bottom: 0rpx;
   display: flex;
   flex-direction: column;
 }
 
 .roomDetail-roomType {
-  text-align: center;
   padding: 20rpx;
   font-size: 35rpx;
   font-weight: 800;
+  background-color: #fafafa;
+  height: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .roomDetail-return {
@@ -271,6 +283,10 @@
   width: 40rpx;
   right: 10px;
   top: 20rpx;
+}
+
+.roomDetailInfo {
+  height: 80%;
 }
 
 .roomImg {
@@ -287,4 +303,86 @@
   padding: 0rpx 25rpx;
   background-color: rgba(0, 0, 0, 0.5);
   font-size: 25rpx;
+}
+
+.bookRoom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  height: 10%;
+}
+
+.roomPrice {
+  width: 50%;
+  display: flex;
+  background-color: #fafafa;
+  color: #2db9a9;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+}
+
+.roomPrice-price {
+  font-size: 50rpx;
+  margin-right: 20rpx;
+}
+
+.roomPrice-discount {
+  font-size: 20rpx;
+  color: #fe9900;
+  border: solid 3rpx #fe9900;
+  border-radius: 7rpx;
+  padding: 0 2rpx;
+  font-weight: 400;
+}
+
+.roomDetail-bookButton {
+  width: 50%;
+  background-color: #fe9900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.roomDetail-roomInfoList {
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: solid 1rpx #f0f0f0;
+  padding: 10rpx;
+}
+
+.roomDetail-roomInfo {
+  min-width: 50%;
+  display: flex;
+  padding: 5rpx 0;
+}
+
+.info-name {
+  padding-left: 20rpx;
+  font-size: 30rpx;
+  color: #a2a2a2;
+}
+
+.info-value {
+  padding-left: 25rpx;
+  font-size: 30rpx;
+}
+
+.showMore {
+  display: flex;
+  margin: 15rpx 0;
+}
+
+.showMoreText {
+  padding-left: 20rpx;
+  font-size: 30rpx;
+  color: #2db9a9;
+}
+
+.showMoreImg {
+  width: 35rpx;
+  height: 35rpx;
+  margin-left: 10rpx;
 }
