--- a/client/pages/bookRoom/bookRoom.wxss
+++ b/client/pages/bookRoom/bookRoom.wxss
@@ -386,3 +386,82 @@ page {
   height: 35rpx;
   margin-left: 10rpx;
 }
+
+.chooseDateBack {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+}
+
+.toChooseDate {
+  width: 100%;
+  height: 840rpx;
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  z-index: 1001;
+  background: #fff;
+  bottom: 0rpx;
+  display: flex;
+  flex-direction: column;
+}
+
+.calendar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fafafa;
+  height: 100%;
+}
+
+.week {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f5f5f5;
+  width: 100%;
+}
+
+.month {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border: solid #ebebeb 2rpx;
+  margin-bottom: 10px;
+  background-color: white;
+}
+
+.ym {
+  font-size: 30rpx;
+  white-space: nowrap;
+  text-align: center;
+  width: 100%;
+}
+
+.days {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.day {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 10%;
+}
+
+.finishChoose {
+  position: fixed;
+  bottom: 0;
+  width: 50%;
+  left: 25%;
+}
