--- a/client/pages/bookRoom/bookRoom.wxss
+++ b/client/pages/bookRoom/bookRoom.wxss
@@ -427,6 +427,8 @@ page {
   align-items: center;
   background-color: #f5f5f5;
   width: 100%;
+  height: 60rpx;
+  font-size: 25rpx;
 }
 
 .month {
@@ -441,8 +443,11 @@ page {
 .ym {
   font-size: 30rpx;
   white-space: nowrap;
-  text-align: center;
   width: 100%;
+  height: 70rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .days {
@@ -460,10 +465,13 @@ page {
 }
 
 .finishChoose {
-  position: fixed;
   bottom: 0;
-  width: 50%;
-  left: 25%;
+  width: 100%;
+  background-color: white;
+  height: 175rpx;
+  border-top: solid #ebebeb 1rpx;
+  display: flex;
+  align-items: center;
 }
 
 .roomDetailInfoBox {
@@ -486,4 +494,22 @@ page {
 
 .refundText {
   width: 94%;
+}
+
+.chooseDateTitle {
+  background-color: #f5f5f5;
+  text-align: center;
+  font-size: 35rpx;
+  height: 100rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cancel2 {
+  width: 40rpx;
+  height: 40rpx;
+  position: absolute;
+  top: 15rpx;
+  left: 15rpx;
 }
