--- a/client/pages/submitOrder/submitOrder.wxss
+++ b/client/pages/submitOrder/submitOrder.wxss
@@ -1,1 +1,95 @@
 /* pages/submitOrder/submitOrder.wxss */
+
+.roomInfoBox {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #20b099;
+  flex-wrap: wrap;
+}
+
+.roomInfo {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: white;
+  width: 93%;
+  margin-top: 30rpx;
+  padding-top: 20rpx;
+  padding-bottom: 20rpx;
+  padding-left: 20rpx;
+  border-bottom-left-radius: 15rpx;
+  border-bottom-right-radius: 15rpx;
+}
+
+.roomType {
+  display: flex;
+  width: 100%;
+  font-size: 35rpx;
+  margin-bottom: 25rpx;
+}
+
+.bookDate {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.checkInDate {
+  width: 30%;
+  font-size: 25rpx;
+}
+
+.checkOutDate {
+  width: 30%;
+  font-size: 25rpx;
+}
+
+.manyDays {
+  width: 30%;
+  font-size: 25rpx;
+}
+
+.roomSimpleDetail {
+  width: 80%;
+  font-size: 25rpx;
+}
+
+.roomDetail {
+  display: flex;
+  width: 20%;
+  font-size: 25rpx;
+  padding-top: 32rpx;
+}
+
+.jumpImg {
+  display: flex;
+  padding-top: 5rpx;
+  width: 25rpx;
+  height: 25rpx;
+}
+
+.waringInfo {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #f5f5f5;
+  width: 93%;
+  font-size: 25rpx;
+  margin-bottom: 25rpx;
+  padding-top: 20rpx;
+  padding-bottom: 20rpx;
+  padding-left: 20rpx;
+  border-top-left-radius: 15rpx;
+  border-top-right-radius: 15rpx;
+}
+
+.word {
+  width: 90%;
+  margin-top: 15rpx;
+}
+
+.label {
+  width: 35rpx;
+  height: 35rpx;
+  margin-right: 18rpx;
+  margin-top: 15rpx;
+}
