--- a/client/pages/bookRoom/bookRoom.wxss
+++ b/client/pages/bookRoom/bookRoom.wxss
@@ -69,7 +69,7 @@ page {
 .jumpButton {
   height: 25rpx;
   width: 25rpx;
-  margin-left: 20rpx;
+  margin-left: 10rpx;
 }
 
 .chooseDate {
@@ -85,6 +85,7 @@ page {
   font-size: 25rpx;
   color: #a2a2a2;
   padding: 15rpx 20rpx;
+  white-space: nowrap;
 }
 
 .checkInDate {
@@ -97,15 +98,18 @@ page {
 }
 
 .date {
-  font-size: 35rpx;
+  font-size: 30rpx;
   color: black;
   margin: 0 3rpx;
+  display: flex;
+  align-items: flex-end;
 }
 
 .howLong {
   font-size: 26rpx;
   color: #2abeaf;
   margin-right: 20rpx;
+  white-space: nowrap;
 }
 
 .roomList {
@@ -500,7 +504,7 @@ page {
   background-color: #f5f5f5;
   text-align: center;
   font-size: 35rpx;
-  height: 100rpx;
+  height: 90rpx;
   display: flex;
   align-items: center;
   justify-content: center;
