--- a/client/pages/hotelDetail/hotelDetail.wxss
+++ b/client/pages/hotelDetail/hotelDetail.wxss
@@ -36,7 +36,6 @@
   padding: 15rpx 20rpx;
   font-size: 30rpx;
   width: 80%;
-  margin-top: 10rpx;
 }
 
 .serviceDetail {
@@ -77,16 +76,24 @@
   justify-content: space-between;
   width: 90%;
   border-bottom: solid #f0f0f0 1rpx;
+  padding: 20rpx;
 }
 
 .word {
   width: 50%;
   font-size: 25rpx;
-  padding-left: 20rpx;
+  padding-left: 35rpx;
 }
 
-.word0 {
-  padding-left: 174rpx;
-  width: 50%;
-  font-size: 25rpx;
+.hotelBriefIntroduction {
+  display: flex;
+  flex-wrap: wrap;
 }
+
+.briefWord {
+  width: 45%;
+  font-size: 25rpx;
+  padding-left: 5%;
+  margin:10rpx 0;
+}
+
