--- a/client/pages/myInfo/myInfo.wxss
+++ b/client/pages/myInfo/myInfo.wxss
@@ -106,7 +106,7 @@
   display: flex;
   font-size: 50rpx;
   margin: 30rpx;
-  align-items: flex-end;
+  align-items: center;
   font-weight: 900;
 }
 
