--- a/client/pages/recharge/recharge.wxml
+++ b/client/pages/recharge/recharge.wxml
@@ -5,8 +5,11 @@
     <view class='rechargeTitle'>
       充值金额
     </view>
-    <input class='rechargeAmount' type='digit' maxlength='7' focus='true' bindinput='inputAmount'>
-    </input>
-    <button class='comfirmRecharge'>确认充值</button>
+    <view class='rechargeAmountBox'>
+      ￥
+      <input class='rechargeAmount' type='digit' maxlength='{{maxLength}}' focus='true' bindinput='inputAmount'>
+      </input>
+    </view>
   </view>
+  <button class='comfirmRecharge'>确认充值</button>
 </view>
